<resources>
    <string name="app_name">Ltg Fresh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Offers</string>
    <string name="my_shop">Shop</string>
    <string name="Welcometostore">Welcome To Store</string>
    <string name="Rs">\u20B9</string>
    <string name="item_details">Product Item Details</string>
    <string name="description">Description</string>
    <string name="benifite">Benefite &amp; Uses</string>
    <string name="disclimer">Disclaimer</string>
    <string name="reviews">Reviews</string>
    <string name="cart">ADD TO CART</string>
    <string name="buy">BUY NOW</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_number">1234567890</string>
    <string name="enter_no">Please Enter Your Registred Mobile No.</string>
    <string name="profile">Edit Profile</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="order_history">Your Order</string>
    <string name="share">Share</string>
    <string name="Contact_us">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="offers">Offers</string>
    <string name="cancel">Cancel</string>
    <string name="ltg_fresh">LTG FRESH</string>
    <string name="logout_text">Are you sure do you want to logged out ?</string>
    <string name="yes">Yes</string>
    <string name="organic_products">Organic Products</string>
    <string name="cart_view">CartView</string>
    <string name="place_order">Place Order</string>
    <string name="Search">Search Here</string>
    <string name="payment">Payment</string>
    <string name="Cash">Cash On Payment</string>
    <string name="payyou">Pay You Money</string>
    <string name="oher">Others</string>
    <string name="remove">Remove</string>
    <string name="wishlist">WishList</string>
    <string name="wishlist_product">WishList Products</string>
    <string name="discount">Discount</string>

</resources>