<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cash"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/arialmt"
        android:id="@+id/cash_payment"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payyou"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/arialmt"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/cash_payment"
        android:id="@+id/payyou_moneypayment"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/oher"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/arialmt"
        android:layout_below="@+id/payyou_moneypayment"
        android:id="@+id/others_payment"/>
</RelativeLayout>