<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ltg.ltgfresh.NavigationDrawerActvity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">



        <action
            android:id="@+id/action_homeFragment_to_itemDetailFragment"
            app:destination="@id/nav_item_details"
            app:exitAnim="@anim/nav_default_exit_anim">

          <!--  <argument
                android:name="product_ID"
                app:argType="string"
                />-->

        </action>

    </fragment>



    <fragment
        android:id="@+id/nav_item_details"
        android:name="com.ltg.ltgfresh.Fragments.ItemDetailsFragment"
        android:label="@string/item_details"
        tools:layout="@layout/fragment_item_detail">

        <argument
            android:name="product_ID"
            app:argType="string"
            />


    </fragment>



    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ltg.ltgfresh.NavigationDrawerActvity.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ltg.ltgfresh.NavigationDrawerActvity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>