<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/edittext_style_reset_password"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/ltg_fresh"
                android:fontFamily="@font/arialmtbold"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/logout_text"
                android:fontFamily="@font/arialmtbold"
                android:paddingLeft="@dimen/_10sdp"
                android:textStyle="bold"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_gravity="end"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_style_reset_pass"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:id="@+id/tvcancel"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style_reset_pass"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/yes"
                    android:id="@+id/tvyes"
                    android:textColor="@color/white"
                    android:layout_marginRight="@dimen/_20sdp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
