<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/TOLL_FREE"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TOLL_FREE"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_7sdp"
            android:background="@drawable/edittext_style_reset_password">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_lock" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_lock"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/arialmt"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_reset"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/arialmt"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/enter_no"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_normal"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/edittext_style_reset_password"
                android:drawableLeft="@drawable/ic_smartphone"
                android:gravity="center"
                android:hint="@string/hint_number"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_phone_no"
                android:layout_margin="@dimen/_30sdp"
                android:background="@drawable/btn_style_reset_pass"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/btn_forget_password"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
